# math-plus-plus

./: CMakeLists.txt
include/math++/: math.h
src/: curve.cpp  curve.h  matrix.h  rotation.h  vector.h  vector2.cpp  vector2.h  vector3.cpp  vector3.h  vector4.cpp  vector4.h  vertex.h
tests/: CMakeLists.txt  main.cpp  matrix.test.cpp  rotation.test.cpp  vector.test.cpp
